Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Testing by justinsorensen</title>
+    <title>CSE594 by justinsorensen</title>
 
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
@@ -15,7 +15,7 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1>Testing</h1>
+        <h1>CSE594</h1>
         <p>TestRepo</p>
 
         <p class="view"><a href="https://github.com/justinsorensen/Testing">View the Project on GitHub <small>justinsorensen/Testing</small></a></p>
