Formatting changes to homepage

--- a/index.html
+++ b/index.html
@@ -28,22 +28,22 @@
         </ul>
       </header>
       <section>
-        <h3>Welcome to GitHub Pages.</h3>
+	  
+	  
+        <h3>Automatically generated page for me to modify and test within.</h3>
 
-<p>Automatically generated page for me to modify and test within.</p>
-
-<pre><code>$ cd your_repo_root/repo_name
-$ git fetch origin
-$ git checkout gh-pages
-</code></pre>
+			<pre><code>$ cd your_repo_root/repo_name
+			$ git fetch origin
+			$ git checkout gh-pages
+			</code></pre>
 
 
-<h3>Pages</h3>
-
-	<ul>
-		<li><a href="http://justinsorensen.github.com/Testing/testing.html">Hello World </a>
-	</ul>
-
+				<h3>Pages</h3>
+					<pre>	
+						<ul>
+							<li><a href="http://justinsorensen.github.com/Testing/testing.html">Hello World </a>
+						</ul>
+					</pre>
 	
 	
       </section>
