--- a/index.html
+++ b/index.html
@@ -11,6 +11,15 @@
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
+	
+	<style>
+		.box
+			{
+				border:5px black;
+				border-radius:20px;
+			}
+	</style>
+	
   </head>
   <body>
     <div class="wrapper">
@@ -39,11 +48,11 @@
 
 
 				<h3>Pages</h3>
-					<pre>	
+					<div class="box">
 						<ul>
 							<li><a href="http://justinsorensen.github.com/Testing/testing.html">Hello World </a>
 						</ul>
-					</pre>
+					</div>
 	
 	
       </section>
