--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
     <![endif]-->
 	
 	<style>
-		.box
-			{
-				border:5px black;
-				border-radius:20px;
+		.box{
+				border: 1px black;
+				border-style: solid;
+				border-radius: 10px;
 			}
 	</style>
 	
