--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
 	
+	<script type="text/javascript"> alert("Welcome to my CSE 594 page.") 
+	</script>
+	
 	<style>
 		.box{
 				border: 1px black;
