--- a/index.html
+++ b/index.html
@@ -78,6 +78,8 @@
 					<div class="box">
 						<ul>
 							<li><a href="http://justinsorensen.github.com/Testing/testing.html">Hello World </a>
+							
+							<li><a href="http://justinsorensen.github.com/Testing/bootstraptest.html">Bootstrap Testing </a>
 						</ul>
 					</div>
 	
