--- a/bootstraptest.html
+++ b/bootstraptest.html
@@ -44,15 +44,15 @@
           <a class="brand" href="#">Justin Sorensen CSE 594</a>
           <div class="nav-collapse collapse">
             <ul class="nav">
-              <li class="active"><a href="#">Home</a></li>
+              <li class="active"><a href="http://justinsorensen.github.com/Testing">Home</a></li>
               <li><a href="#about">About</a></li>
               <li><a href="#contact">Contact</a></li>
               <li class="dropdown">
-                <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <b class="caret"></b></a>
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown">Move to: <b class="caret"></b></a>
                 <ul class="dropdown-menu">
-                  <li><a href="#">Action</a></li>
-                  <li><a href="#">Another action</a></li>
-                  <li><a href="#">Something else here</a></li>
+                  <li><a href="#firstsection">First section</a></li>
+                  <li><a href="#secondsection">Second section</a></li>
+                  
                   <li class="divider"></li>
                   <li class="nav-header">Nav header</li>
                   <li><a href="#">Separated link</a></li>
@@ -73,31 +73,104 @@
     <div class="container">
 
       <!-- Main hero unit for a primary marketing message or call to action -->
-      <div class="hero-unit">
+      
+	  <!-- Carousel
+    ================================================== -->
+    <div id="myCarousel" class="carousel slide">
+      <div class="carousel-inner">
+        <div class="item active">
+		  <img src="bootstrap/img/examples/slide-01.jpg" alt="">
+          <div class="container">
+            <div class="carousel-caption">
+              <h1>First slide.</h1>
+              <p class="lead">Remember that you need an img to place the text on top of.</p>
+              <a class="btn btn-large btn-primary" href="#">Here is an example button!</a>
+            </div>
+          </div>
+        </div>
+        <div class="item">
+		  <img src="bootstrap/img/examples/slide-02.jpg" alt="">
+          <div class="container">
+            <div class="carousel-caption">
+              <h1>Second slide.</h1>
+              <p class="lead">This example is using stock images included with bootstrap.</p>
+              <a class="btn btn-large btn-primary" href="#">Second button.</a>
+            </div>
+          </div>
+        </div>
+        <div class="item">
+		  <img src="bootstrap/img/examples/slide-03.jpg" alt="">
+          <div class="container">
+            <div class="carousel-caption">
+              <h1>Third slide.</h1>
+              <p class="lead">Even more placeholder text!</p>
+              <a class="btn btn-large btn-primary" href="#">Another button.</a>
+            </div>
+          </div>
+        </div>
+      </div>
+      <a class="left carousel-control" href="#myCarousel" data-slide="prev">&lsaquo;</a>
+      <a class="right carousel-control" href="#myCarousel" data-slide="next">&rsaquo;</a>
+    </div><!-- /.carousel -->
+	  
+	  
+	  
+	  
+	  
+	  
+	  <!-- Previous text area -->
+	<section id="firstsection">  
+	  <div class="hero-unit">
         <h1>Hello, world!</h1>
-        <p>This is a template that I will use to store neat code from bootstrap for future reference.</p>
+        <p>This is a template that I will use to store neat code from bootstrap for future reference. The positioning below is terrible, but I am just testing to see examples of how it looks.</p>
         <p><a class="btn btn-primary btn-large">Learn more &raquo;</a></p>
       </div>
-
+	</section>
+	
+	
+	<section id="secondsection">
+	<h1>Grid experimentation</h1>
+	<center>  
       <!-- Example row of columns -->
       <div class="row">
         <div class="span4">
-          <h2>Heading</h2>
+          <h2>Heading 4 wide.</h2>
           <p>Column1 Text. </p>
           <p><a class="btn" href="#">View details &raquo;</a></p>
         </div>
         <div class="span4">
-          <h2>Heading</h2>
+          <h2>Heading 4 wide.</h2>
           <p>Column2 Text.</p>
           <p><a class="btn" href="#">View details &raquo;</a></p>
        </div>
         <div class="span4">
-          <h2>Heading</h2>
+          <h2>Heading 4 wide.</h2>
           <p>Column3 Text.</p>
           <p><a class="btn" href="#">View details &raquo;</a></p>
         </div>
       </div>
-
+	  
+	  <!-- Another example adjusting sizing -->
+	  <div class="row">
+        <div class="span2">
+          <h2>Heading 2 wide.</h2>
+          <p>Column1 Text. </p>
+          <p><a class="btn" href="#">View details &raquo;</a></p>
+        </div>
+        <div class="span3">
+          <h2>Heading 3 wide.</h2>
+          <p>Column2 Text.</p>
+          <p><a class="btn" href="#">View details &raquo;</a></p>
+       </div>
+        <div class="span7">
+          <h2>Heading 7 wide.</h2>
+          <p>Column3 Text.</p>
+          <p><a class="btn" href="#">View details &raquo;</a></p>
+        </div>
+      </div>
+	</center>
+	</section>
+	
       <hr>
 
       <footer>
